--- a/getting-started.html
+++ b/getting-started.html
@@ -162,6 +162,16 @@ smoke/
 		<script src="smoke/js/smoke.js"></script>
 		<!-- Scripts -->
 		<script src="js/scripts.js"></script>
+		<!-- Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-56460444-2', 'auto');
+		  ga('send', 'pageview');
+		</script>
 
 	</body>
 </html>
