Se modificaron las ligas de compartir
Se actualizaron las ligas de compartir de redes sociales (fb,tw y g+)

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 					</div>
 					<div class="col-md-6 text-right">
 						<ul class="list-inline">
-							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="https://github.com/alfredobarron/smoke" data-via="AlfredoBarronC" data-hashtags="Smoke">Tweet</a></li>
+							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://alfredobarron.github.io/smoke" data-via="AlfredoBarronC" data-hashtags="Smoke">Tweet</a></li>
 
-							<li><div class="g-plus" data-action="share" data-annotation="bubble" data-href="https://github.com/alfredobarron/smoke"></div></li>
+							<li><div class="g-plus" data-action="share" data-annotation="bubble" data-href="http://alfredobarron.github.io/smoke"></div></li>
 
-							<li><div class="fb-share-button" data-href="https://github.com/alfredobarron/smoke" data-layout="button_count"></div></li>
+							<li><div class="fb-share-button" data-href="http://alfredobarron.github.io/smoke" data-layout="button_count"></div></li>
 						</ul>
 					</div>
 				</div><!-- follow -->
