Se agrego la liga para la version 2

--- a/v1.0/index.html
+++ b/v1.0/index.html
@@ -31,7 +31,8 @@
         <h1>SMOCK</h1>
         <p class="lead">Jquery Plugin, validación de formularios fácil y simple, mensajes de alerta y confirmación con estilo, colección de funciones para programar.</p>
         <p><a class="btn btn-default btn-lg" role="button" href="primeros-pasos.html">Descargar Version 1.0</a></p>
-        <a href="primeros-pasos.html">Documentación</a>
+        <a href="primeros-pasos.html">Documentación</a><br><br>
+        <div class="alert alert-info">Esta versión es compatible con Bootstrap 2 si usas Botstrap 3 consulta la versión <a href="../">Smoke v2</a></div>
         <div class="follow">
           <ul class="list-inline">
             <li><iframe src="http://ghbtns.com/github-btn.html?user=alfredobarron&repo=smock&type=watch&count=true"
