--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 					<p class="lead">Jquery Plugin diseñado para usarse en Bootstrap 3<br>Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación y Mas</p>
 
-					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="https://github.com/alfredobarron/smoke" target="_blank">Descarga Smoke v2.0.1</a></p>
+					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="getting-started.html">Descargar Smoke v2.0.1</a></p>
 
 			</div><!-- /.container -->
 		</div>
@@ -88,26 +88,29 @@
 					</div>
 				</div>
 
-				<hr class="small">
-				<p class="lead">Keep It Simple, Stupid!</p>
+				<div class="row">
+					<hr class="small">
+					<p class="lead">Keep It Simple, Stupid!</p>
+				</div>
 
 				<!-- <p class="lead2">Smoke es open source, esta hosteado, desarrollado y mantenido en GitHub.</p>
 				<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="https://github.com/alfredobarron/smock" target="_blank">Ver en GitHub</a></p> -->
 
-
-				<div class="follow">
+				<div class="row follow">
 					<hr>
-					<div class="col-md-6 text-left">
-						<p>Diseñado y Desarrollado con muchas ganas por <a href="https://twitter.com/AlfredoBarronC" target="_blank">@AlfredoBarronC</a></p>
-					</div>
-					<div class="col-md-6 text-right">
+					<div class="col-md-12 text-center">
 						<ul class="list-inline">
-							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://alfredobarron.github.io/smoke" data-via="AlfredoBarronC" data-hashtags="Smoke">Tweet</a></li>
-
 							<li><div class="g-plus" data-action="share" data-annotation="bubble" data-href="http://alfredobarron.github.io/smoke"></div></li>
 
 							<li><div class="fb-share-button" data-href="http://alfredobarron.github.io/smoke" data-layout="button_count"></div></li>
+
+							<li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://alfredobarron.github.io/smoke" data-via="AlfredoBarronC" data-hashtags="Smoke">Tweet</a></li>
 						</ul>
+						<p>Diseñado y Desarrollado con muchas ganas por <a href="https://twitter.com/AlfredoBarronC" target="_blank">@AlfredoBarronC</a></p>
+
+						<p>Código y documentación (c) Copyright 2014 Alfredo Barron. Código publicado bajo la <a href="https://github.com/alfredobarron/smoke/blob/master/LICENCIA">licencia GPL v3.</a></p>
+
+						<p><a href="https://github.com/alfredobarron/smoke" target="_blank">GitHub</a> . <a href="http://alfredobarron.github.io/smoke/v1.0/" target="_blank">v1.0</a> . <a href="https://github.com/alfredobarron/smoke/issues" target="_blank">Preguntas</a> . <a href="https://github.com/alfredobarron/smoke/releases" target="_blank">Versiones</a></p>
 					</div>
 				</div><!-- follow -->
 
