Se actualizo la liga de descarga

--- a/getting-started.html
+++ b/getting-started.html
@@ -79,7 +79,7 @@
 					<section id="download-smoke">
 						<h1>Descargar Smoke</h1><hr>
 						<p class="lead">Descarga Smoke y agregalo a tu proyecto, usarlo es fácil y rápido.</p>
-						<p><a class="btn btn-default btn-lg" role="button" href="https://github.com/alfredobarron/smoke/archive/v2.0.1-dist.zip" target="_blank">Descargar Smoke</a></p>
+						<p><a class="btn btn-default btn-lg" role="button" href="https://github.com/alfredobarron/smoke/releases/download/v2.0.1/smoke-v2.0.1.zip" target="_blank">Descargar Smoke</a></p>
 					</section>
 
 					<section id="whats-included">
