Se agrego el mensaje de GitHub

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
 
 				<div class="row">
 					<hr class="small">
+					<p class="lead2">Smoke es open source, esta hosteado, desarrollado y mantenido en GitHub.</p>
+					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="https://github.com/alfredobarron/smoke" target="_blank">Ver en GitHub</a></p>
+					<hr class="small">
 					<p class="lead">Keep It Simple, Stupid!</p>
 				</div>
-
-				<!-- <p class="lead2">Smoke es open source, esta hosteado, desarrollado y mantenido en GitHub.</p>
-				<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="https://github.com/alfredobarron/smock" target="_blank">Ver en GitHub</a></p> -->
 
 				<div class="row follow">
 					<hr>
@@ -110,7 +110,7 @@
 
 						<p>Código y documentación (c) Copyright 2014 Alfredo Barron. Código publicado bajo la <a href="https://github.com/alfredobarron/smoke/blob/master/LICENCIA">licencia GPL v3.</a></p>
 
-						<p><a href="https://github.com/alfredobarron/smoke" target="_blank">GitHub</a> . <a href="http://alfredobarron.github.io/smoke/v1.0/" target="_blank">v1.0</a> . <a href="https://github.com/alfredobarron/smoke/issues" target="_blank">Preguntas</a> . <a href="https://github.com/alfredobarron/smoke/releases" target="_blank">Versiones</a></p>
+						<p><a href="https://github.com/alfredobarron/smoke" target="_blank">GitHub</a> . <a href="http://alfredobarron.github.io/smoke/v1.0/" target="_blank">Smock v1.0</a> . <a href="https://github.com/alfredobarron/smoke/issues" target="_blank">Preguntas</a> . <a href="https://github.com/alfredobarron/smoke/releases" target="_blank">Versiones</a></p>
 					</div>
 				</div><!-- follow -->
 
