Se agrego el progressbar mas actualizaciones
#JS
Se corrigió el error al validar los checkbox.
Se agrego la <p> en los mensajes de alerta.
Se agrego la función de progressbar.

#CSS
Se actualizo la posición de los mensajes de validación.
Se hicieron mas anchos los mensajes de alerta.
Se agrego la clase del progress bar.

--- a/notifications.html
+++ b/notifications.html
@@ -6,8 +6,8 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Smoke . Notificaciones</title>
-		<meta name="description" content="Jquery Plugin diseñado para usarse en Bootstrap 3. Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación y Mas" />
-		<meta name="keywords" content="HTML, CSS, JS, JavaScript, JQuery, plugin, bootstrap, smoke, front-end, frontend, web development, valida, validar, validacion, validate, formulario, formularios, form, mensajes, alertas, alerta, notificacion, notificaciones, alert, confirmacion, confirm, alfredobarron, alfredo barron, alfredo, barron" />
+		<meta name="description" content="Jquery Plugin diseñado para usarse en Bootstrap 3. Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación, Barra de progreso y Mas" />
+		<meta name="keywords" content="HTML, CSS, JS, JavaScript, JQuery, plugin, bootstrap, smoke, front-end, frontend, web development, valida, validar, validacion, validate, formulario, formularios, form, mensajes, alertas, alerta, notificacion, notificaciones, alert, confirmacion, confirm, progressbar, alfredobarron, alfredo barron, alfredo, barron" />
 		<meta name="robots" content="index,follow,archive">
 		<meta name="author" content="Alfredo Barron" />
 		<link rel="shortcut icon" href="images/favicon.png">
@@ -46,6 +46,7 @@
 						<li><a href="getting-started.html">Primeros pasos</a></li>
 						<li><a href="validate.html">Validación</a></li>
 						<li class="active"><a href="notifications.html">Notificaciones</a></li>
+						<li><a href="progressbar.html">Barra de Progreso</a></li>
 						<li><a href="helpers.html">Helpers</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
