--- a/progressbar.html
+++ b/progressbar.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Smoke</title>
+		<title>Smoke . Barra de Progreso</title>
 		<meta name="description" content="Jquery Plugin diseñado para usarse en Bootstrap 3. Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación, Barra de progreso y Mas" />
 		<meta name="keywords" content="HTML, CSS, JS, JavaScript, JQuery, plugin, bootstrap, smoke, front-end, frontend, web development, valida, validar, validacion, validate, formulario, formularios, form, mensajes, alertas, alerta, notificacion, notificaciones, alert, confirmacion, confirm, progressbar, alfredobarron, alfredo barron, alfredo, barron" />
 		<meta name="robots" content="index,follow,archive">
@@ -46,66 +46,90 @@
 						<li><a href="getting-started.html">Primeros pasos</a></li>
 						<li><a href="validate.html">Validación</a></li>
 						<li><a href="notifications.html">Notificaciones</a></li>
-						<li><a href="progressbar.html">Barra de Progreso</a></li>
+						<li class="active"><a href="progressbar.html">Barra de Progreso</a></li>
 						<li><a href="helpers.html">Helpers</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container -->
 		</nav>
 
-		<div class="black">
-			<div class="container text-center">
-
-					<h1>SMOKE</h1>
-
-					<p class="lead">Jquery Plugin diseñado para usarse en Bootstrap 3<br>Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación, Barra de progreso y Mas</p>
-
-					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="getting-started.html">Descargar Smoke v2.0.1</a></p>
-
-			</div><!-- /.container -->
+		<div class="jumbotron">
+			<div class="container">
+				<h1>Barra de Progreso</h1>
+				<p class="lead">Añade una barra de progreso a tu aplicación.</p>
+			</div>
 		</div>
 
-		<div class="white">
-			<div class="container text-center">
+		<div class="container">
+			<div class="row">
 
-				<div class="row">
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-						<a class="smk-transition1" href="validate.html">
-							<span class="glyphicon glyphicon-ok"></span>
-							<h2>Validación</h2>
-						</a>
-					</div>
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-						<a class="smk-transition1" href="notifications.html">
-							<span class="glyphicon glyphicon-bell"></span>
-							<h2>Notificaciones</h2>
-						</a>
-					</div>
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-						<a class="smk-transition1" href="progressbar.html">
-							<span class="glyphicon glyphicon-tasks"></span>
-							<h2>Barra de progreso</h2>
-						</a>
-					</div>
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
-						<a class="smk-transition1" href="helpers.html">
-							<span class="glyphicon glyphicon-gift"></span>
-							<h2>Helpers</h2>
-						</a>
+				<div class="col-lg-3">
+					<div class="list-group" data-spy="affix" data-offset-top="260">
+							<ul class="nav">
+								<a href="#progressbar" class="list-group-item">Barra de Progreso</a>
+							</ul>
 					</div>
 				</div>
 
-				<div class="row">
-					<hr class="small">
-					<p class="lead2">Smoke es open source, esta hosteado, desarrollado y mantenido en GitHub.</p>
-					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="https://github.com/alfredobarron/smoke" target="_blank">Ver en GitHub</a></p>
-					<hr class="small">
-					<p class="lead">Keep It Simple, Stupid!</p>
-				</div>
+				<div class="col-lg-9">
 
-				<div class="row follow">
-					<hr>
-					<div class="col-md-12 text-center">
+					<section id="progressbar">
+
+						<h1>Barra de Progreso</h1><hr>
+						<p class="lead">Añade una barra de progreso a tu aplicación, en cualquier evento.</p>
+
+						<div class="panel panel-default">
+							<div class="panel-body">
+								<p class="text-muted"><small>EXAMPLE</small></p>
+								<form class="form-horizontal" role="form">
+									<div class="form-group">
+										<div class="col-sm-12">
+											<a href="#" class="btn btn-info" id="btnProgressBar">Start</a>
+										</div>
+									</div>
+								</form>
+							</div>
+							<div class="panel-footer">
+								<p class="text-muted"><small>CODE</small></p>
+								<script src="https://gist.github.com/alfredobarron/ae5120fb3ee80fc247a2.js"></script>
+							</div>
+						</div>
+
+						<h3>Opciones</h3>
+						<p>Personaliza el elemento en el que se agregara la barra de progreso, define cuando inicia y cuando termina.</p>
+
+						<table class="table table-bordered">
+							<thead>
+								<tr>
+									<th>Opción</th>
+									<th>Tipo</th>
+									<th>Default</th>
+									<th>Descripción</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>element</td>
+									<td>id | class</td>
+									<td>body</td>
+									<td>Elemento en el que se agregara el progressBar</td>
+								</tr>
+								<tr>
+									<td>status</td>
+									<td>start | end</td>
+									<td>start</td>
+									<td>Cuando inicia y cuando termina</td>
+								</tr>
+							</tbody>
+						</table>
+
+						<p data-height="250" data-theme-id="8624" data-slug-hash="zxBojo" data-default-tab="result" data-user="alfredobarron" class='codepen'>See the Pen <a href='http://codepen.io/alfredobarron/pen/zxBojo/'>Smoke ProgressBar</a> by Alfredo Barron (<a href='http://codepen.io/alfredobarron'>@alfredobarron</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+
+					</section>
+
+
+					<footer class="follow">
+						<hr>
 						<ul class="list-inline">
 							<li><div class="g-plus" data-action="share" data-annotation="bubble" data-href="http://alfredobarron.github.io/smoke"></div></li>
 
@@ -118,17 +142,22 @@
 						<p>Código y documentación (c) Copyright 2014 Alfredo Barron. Código publicado bajo la <a href="https://github.com/alfredobarron/smoke/blob/master/LICENCIA">licencia GPL v3.</a></p>
 
 						<p><a href="https://github.com/alfredobarron/smoke" target="_blank">GitHub</a> . <a href="http://alfredobarron.github.io/smoke/v1.0/" target="_blank">Smock v1.0</a> . <a href="https://github.com/alfredobarron/smoke/issues" target="_blank">Preguntas</a> . <a href="https://github.com/alfredobarron/smoke/releases" target="_blank">Versiones</a></p>
-					</div>
-				</div><!-- follow -->
+					</footer>
 
-			</div><!-- .container -->
-		</div><!-- .white-->
+				</div><!--/.col-lg-9 -->
+			</div><!--/.row -->
+		</div><!-- /.container -->
 
 		<!-- jQuery -->
 		<script src="https://code.jquery.com/jquery.js"></script>
-
 		<!-- Botstrap -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+		<!-- Smoke -->
+		<script src="smoke/js/smoke.js"></script>
+		<!-- Scripts -->
+		<script src="js/scripts.js"></script>
+		<!-- CodePen-->
+		<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
 
 		<!-- Twitter -->
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
