--- a/index.html
+++ b/index.html
@@ -60,13 +60,18 @@
 
 					<p class="lead">Jquery Plugin diseñado para usarse en Bootstrap 3<br>Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación, Barra de progreso y Mas</p>
 
-					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="getting-started.html">Descargar Smoke v2.0.2</a></p>
+					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="getting-started.html">Descargar Smoke v2.0.3</a></p>
 
 			</div><!-- /.container -->
 		</div>
 
 		<div class="white">
 			<div class="container text-center">
+
+				<div class="row">
+					<p class="lead">Keep It Simple, Stupid!</p>
+					<hr class="small">
+				</div>
 
 				<div class="row">
 					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
@@ -99,8 +104,6 @@
 					<hr class="small">
 					<p class="lead2">Smoke es open source, esta hosteado, desarrollado y mantenido en GitHub.</p>
 					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="https://github.com/alfredobarron/smoke" target="_blank">Ver en GitHub</a></p>
-					<hr class="small">
-					<p class="lead">Keep It Simple, Stupid!</p>
 				</div>
 
 				<div class="row follow">
@@ -115,7 +118,7 @@
 						</ul>
 						<p>Diseñado y Desarrollado con muchas ganas por <a href="https://twitter.com/AlfredoBarronC" target="_blank">@AlfredoBarronC</a></p>
 
-						<p>Código y documentación (c) Copyright 2014 Alfredo Barron. Código publicado bajo la <a href="https://github.com/alfredobarron/smoke/blob/master/LICENCIA">licencia GPL v3.</a></p>
+						<p>Código y documentación (c) Copyright 2015 Alfredo Barron. Código publicado bajo la <a href="https://github.com/alfredobarron/smoke/blob/master/LICENCIA">licencia GPL v3.</a></p>
 
 						<p><a href="https://github.com/alfredobarron/smoke" target="_blank">GitHub</a> . <a href="http://alfredobarron.github.io/smoke/v1.0/" target="_blank">Smock v1.0</a> . <a href="https://github.com/alfredobarron/smoke/issues" target="_blank">Preguntas</a> . <a href="https://github.com/alfredobarron/smoke/releases" target="_blank">Versiones</a></p>
 					</div>
