--- a/helpers.html
+++ b/helpers.html
@@ -69,6 +69,7 @@
 				<div class="col-lg-3">
 					<div class="list-group" data-spy="affix" data-offset-top="260">
 							<ul class="nav">
+								<a href="#float" class="list-group-item">Float</a>
 								<a href="#currency" class="list-group-item">Moneda</a>
 								<a href="#URL" class="list-group-item">URL</a>
 								<a href="#date" class="list-group-item">Fecha</a>
@@ -78,6 +79,31 @@
 				</div>
 
 				<div class="col-lg-9">
+
+					<section id="float">
+
+						<h1>Float</h1><hr>
+						<p class="lead">Convierte un string a float.</p>
+						<div class="panel panel-default">
+							<div class="panel-body">
+								<p class="text-muted"><small>EXAMPLE</small></p>
+								<form role="form" id="formFloatConv">
+									<div class="form-group">
+										<label for="text">Number</label>
+											<input type="text" class="form-control" placeholder="Enter number" smk-type="currency" required>
+									</div>
+									<button type="button" class="btn btn-default">Convert</button>
+								</form>
+							</div>
+							<div class="panel-footer">
+								<p class="text-muted"><small>CODE</small></p>
+								<script src="https://gist.github.com/alfredobarron/e5b4156c2de3acb291fb.js"></script>
+							</div>
+						</div>
+
+						<p data-height="320" data-theme-id="8624" data-slug-hash="bNZGmX" data-default-tab="result" data-user="alfredobarron" class='codepen'>See the Pen <a href='http://codepen.io/alfredobarron/pen/bNZGmX/'>Smoke Float</a> by Alfredo Barron (<a href='http://codepen.io/alfredobarron'>@alfredobarron</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+
+					</section>
 
 					<section id="currency">
 
