--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 
 					<h1>SMOKE</h1>
 
-					<p class="lead">Jquery Plugin diseñado para usarse en Bootstrap 3<br>Validación de formularios, Notificaciones, Alertas, Mensajes de Confirmación, Barra de progreso y Mas</p>
+					<p class="lead">Smoke es el mas completo y ligero Plugin Jquery diseñado para usarse en Bootstrap 3</p>
 
-					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="getting-started.html">Descargar Smoke v2.1.0</a></p>
+					<p><a class="btn btn-default btn-lg smk-transition1" role="button" href="getting-started.html">Descargar Smoke v2.1.1</a></p>
 
 			</div><!-- /.container -->
 		</div>
@@ -69,35 +69,56 @@
 			<div class="container text-center">
 
 				<div class="row">
-					<p class="lead">Keep It Simple, Stupid!</p>
+					<p class="lead">Características</p>
 					<hr class="small">
 				</div>
 
 				<div class="row">
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 						<a class="smk-transition1" href="validate.html">
 							<span class="glyphicon glyphicon-ok"></span>
-							<h2>Validación</h2>
+							<h3>Validación</h3>
 						</a>
 					</div>
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 						<a class="smk-transition1" href="notifications.html">
 							<span class="glyphicon glyphicon-bell"></span>
-							<h2>Notificaciones</h2>
+							<h3>Notificaciones</h3>
 						</a>
 					</div>
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 						<a class="smk-transition1" href="progressbar.html">
 							<span class="glyphicon glyphicon-tasks"></span>
-							<h2>Barra de progreso</h2>
+							<h3>Barra de progreso</h3>
 						</a>
 					</div>
-					<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
+				</div>
+
+				<div class="row">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<a class="smk-transition1" href="fullscreen.html">
+							<span class="glyphicon glyphicon-fullscreen"></span>
+							<h3>Pantalla completa</h3>
+						</a>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<a class="smk-transition1" href="panel.html">
+							<span class="glyphicon glyphicon-list-alt"></span>
+							<h3>Panel</h3>
+						</a>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 						<a class="smk-transition1" href="helpers.html">
 							<span class="glyphicon glyphicon-gift"></span>
-							<h2>Helpers</h2>
+							<h3>Helpers</h3>
 						</a>
 					</div>
+				</div>
+
+				<div class="row">
+					<hr class="small">
+					<p class="lead">Keep It Simple, Stupid!</p>
+
 				</div>
 
 				<div class="row">
